--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
-		<title>CYBERFICTION*</title>
+		<title>Ravzzy</title>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
 			integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
@@ -30,37 +30,35 @@
 			/>
 		</div>
 		<nav>
-			<h1>CyberFiction*</h1>
-			<div>Made by <a href="https://github.com/Dharmik48">Dharmik</a></div>
+			<h1>Ravzzy's Digital Garage</h1>
+			<div>Made by <a href="https://ravzzy.com">Ravzzy</a></div>
 		</nav>
 		<canvas id="canvas"> </canvas>
 		<section class="hero">
 			<div class="text-loop">
 				<div class="hero-title">
-					<span>This</span> <span>website</span> <span>is a</span>
-					<span>clone</span> <span>of</span> <span>cyberfiction</span
-					><span>.io</span>
+					<span>This</span> <span>is a</span> <span>digital</span>
+					<span>garage</span> <span>of</span> <span>ravzzy</span
+					><span>.com</span>
 				</div>
 				<div class="hero-title">
-					<span>This</span> <span>website</span> <span>is a</span>
-					<span>clone</span> <span>of</span> <span>cyberfiction</span
-					><span>.io</span>
+					<span>This</span> <span>is a</span> <span>digital</span>
+					<span>garage</span> <span>of</span> <span>ravzzy</span
+					><span>.com</span>
 				</div>
 				<div class="hero-title">
-					<span>This</span> <span>website</span> <span>is a</span>
-					<span>clone</span> <span>of</span> <span>cyberfiction</span
-					><span>.io</span>
+					<span>This</span> <span>is a</span> <span>digital</span>
+					<span>garage</span> <span>of</span> <span>ravzzy</span
+					><span>.com</span>
 				</div>
 			</div>
 			<div class="hero-content">
 				<div class="left-content">
-					CYBERFICTION AIMS TO BE A DECENTRALIZED COMMUNITY THAT CAN CREATE NEW
-					VALUES AND PROFITS THROUGH PLAY IN THE VIRTUAL WORLD.
+					Where web design meets the open road! Explore my world as a creative web designer, adrenaline-pumping moto biker, and content creator on YouTube & Instagram. Get inspired by my designs, rides, and lifestyle—everything that fuels my passion. Let's create something epic together!
 				</div>
 				<div class="right-content">
 					<p>
-						사이버픽션은 가상 세계에서 놀이를 통해 새로운 가치와 이윤을 창조할
-						수 있는 탈중앙화 커뮤니티를 지향합니다.
+						웹 디자인이 오픈 로드와 만나는 곳! YouTube와 Instagram에서 창의적인 웹 디자이너, 아드레날린이 솟구치는 모토 바이커, 콘텐츠 크리에이터로서의 제 세계를 탐험하세요. 제 디자인, 라이드, 라이프스타일에서 영감을 얻으세요. 제 열정에 활력을 불어넣는 모든 것. 함께 멋진 것을 만들어 봅시다!
 					</p>
 					<p>...SCROLL TO READ</p>
 				</div>
