--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 		<section class="hero">
 			<div class="text-loop">
 				<div class="hero-title">
-					<span>This</span> <span>is a</span> <span>digital</span>
-					<span>garage</span> <span>of</span> <span>ravzzy</span
+					<span>Welcome</span> <span>to my</span> <span>digital</span>
+					<span>garage</span> <span>@</span> <span>ravzzy</span
 					><span>.com</span>
 				</div>
 				<div class="hero-title">
-					<span>This</span> <span>is a</span> <span>digital</span>
-					<span>garage</span> <span>of</span> <span>ravzzy</span
+					<span>Welcome</span> <span>to my</span> <span>digital</span>
+					<span>garage</span> <span>@</span> <span>ravzzy</span
 					><span>.com</span>
 				</div>
 				<div class="hero-title">
-					<span>This</span> <span>is a</span> <span>digital</span>
-					<span>garage</span> <span>of</span> <span>ravzzy</span
+					<span>Welcome</span> <span>to my</span> <span>digital</span>
+					<span>garage</span> <span>@</span> <span>ravzzy</span
 					><span>.com</span>
 				</div>
 			</div>
@@ -66,65 +66,49 @@
 		</section>
 		<section class="page two">
 			<div class="left">
-				<div class="thin">CYBERFICTION / KEY WORD</div>
-				<div class="fat">HAVE FUN</div>
-				<div class="fat">LET'S PLAY</div>
-				<div class="fat">JUST BE TOGETHER</div>
+				<div class="thin">HOW I CAN HELP YOU?</div>
+				<div class="fat">WEB DESIGNING,</div>
+				<div class="fat">SPONSORED POSTS & STORIES</div>
 			</div>
 			<div class="right">
-				<div class="fat">MAKE A STORY</div>
-				<div class="fat">TAKE A CHANCE</div>
-				<div class="fat">BUILD AND OWNED</div>
-				<div class="thin">...AND MAINTAIN GOOD HUMANITY</div>
+				<div class="fat">SPONSORED</div>
+				<div class="fat">REVIEWS &</div>
+				<div class="fat">COLLABORATION</div>
+				<div class="thin">...AND MUCH MORE</div>
 			</div>
 		</section>
 		<section class="page three">
 			<div class="left">
-				<div class="thin">CYBERFICTION / HAVE FUN</div>
-				<div class="fat">LET'S</div>
-				<div class="fat">HAVE FUN</div>
-				<div class="fat">TOGETHER</div>
+				<div class="thin">BUT WHY CHOOSE ME?</div>
+				<div class="fat">33,000+ SUBSCRIBERS,</div>
+				<div class="fat">ORGANIC REACH &</div>
+				<div class="fat">PERSONALISATION</div>
 			</div>
 			<div class="right">
 				<div class="thin">
-					LET'S HAVE A BLAST! LET'S JUST THROW AWAY AGE, GENDER, REGION, STATUS,
-					ETC., DON'T COMPETE, DON'T FIGHT, COOPERATE AND SHARE WITH EACH OTHER
-					AND ENJOY IT TOGETHER! SO THAT YOU CAN STAND THERE IN THE
-					NOT-TOO-DISTANT FUTURE AND DREAM OF ANOTHER NEW FUTURE
+					I collaborate with brands that align with my interests and values. If you're looking for an authentic influencer to promote your brand in the lifestyle, travel, tech, or biking space, I’m open to working with you
 				</div>
 				<div class="thin">
-					신나게 한판 놀아보자! 나이, 성별, 지역, 지위 등은 그냥 던져버리고,
-					경쟁하지 않으며, 싸우지 않고, 서로 협력하고 공유하면서 우리 함께
-					즐겨보자! 멀지 않은 미래에 그곳에 서서, 또다른 새로운 미래를 꿈 꿀 수
-					있도록~
+					저는 제 관심사와 가치와 일치하는 브랜드와 협업합니다. 라이프스타일, 여행, 기술 또는 자전거 분야에서 브랜드를 홍보할 진정한 인플루언서를 찾고 있다면, 저는 여러분과 함께 일할 수 있습니다.
 				</div>
 			</div>
 		</section>
 		<section class="page four">
 			<div class="left">
 				<div class="thin">
-					CYBERFIELD IS OUR PLAYGROUND! IT IS A DAZZLING BEACH IN THE SOUTH
-					PACIFIC, A BLIZZARD OF HILLS IN THE ALPS, AND SOMETIMES SOMEWHERE ON
-					THE MOON WHERE THE EARTH IS VISIBLE. WE CAN HAVE A PARTY THERE,
-					EXPERIENCE ADVENTURES, AND ENJOY A QUIET REST. THE WORLD THAT
-					CYBERFICTION WILL CREATE! WE WILL CREATE AND OWN.
+					As a web designer, moto biker, YouTuber, and Instagram influencer, I bring a unique combination of creativity, adventure, and technical expertise. Whether you're looking for cutting-edge web design, adrenaline-packed biking content, or lifestyle inspiration, I offer it all in one place.
 				</div>
 				<div class="thin">
-					사이버 필드는 우리들의 놀이터! 그곳은 남태평양의 눈부신 해변이고,
-					알프스 산맥의 눈보라치는 언덕이고, 때로는 지구가 보이는 달 그 어딘가
-					일 것이다. 우리는 그곳에서 파티를 열고, 어드벤쳐를 경험하고, 조용한
-					휴식도 즐길 수 있겠지. 사이버픽션이 만들어갈 세상! 우리가 만들고
-					소유할 것이다.
+					웹 디자이너, 모토 바이커, 유튜버, 인스타그램 인플루언서로서 저는 창의성, 모험, 기술 전문성의 독특한 조합을 가져옵니다. 최첨단 웹 디자인, 아드레날린이 가득한 바이킹 콘텐츠, 라이프스타일 영감을 찾고 있든, 저는 한곳에서 모든 것을 제공합니다.
 				</div>
 			</div>
 			<div class="right">
-				<div class="thin">CYBERFICTION / PLAYGROUND</div>
-				<div class="fat">CYBERFIELD</div>
-				<div class="fat">IS OUR</div>
-				<div class="fat">PLAYGROUND</div>
+				<div class="thin">Sill unsure?</div>
+				<div class="fat">Scroll down</div>
+
 			</div>
 		</section>
-		<div class="avatars">
+		<!--<div class="avatars">
 			<section>
 				<div class="top">
 					<div class="thin">CYBERFICTION / AVATARS</div>
@@ -245,29 +229,29 @@
 					</div>
 				</div>
 			</section>
-		</div>
+		</div> -->
 		<section class="roadmap">
 			<div class="title">
-				<div class="fat">Road Map</div>
-				<div class="thin">We will move forward with the community.</div>
+				<div class="fat">COLLABORATIONS & PROJECTS DELIVERED</div>
+				<div class="thin">Designing the digital world by day, chasing the open road by night—blending creativity, adventure, and passion into everything I do.</div>
 			</div>
 			<div class="cards">
 				<div class="card">
 					<div class="thin">01/</div>
 					<div class="title">LAUNCH OF OFFICIAL WEBSITE</div>
-					<div class="thin">CYBERFICTION OFFICIAL WEBSITE OPENED</div>
+					<div class="thin">RAVZZY OFFICIAL WEBSITE OPENED</div>
 					<div class="thin">사이버픽션 공식 홈페이지 오픈</div>
 				</div>
 				<div class="card">
 					<div class="thin">02/</div>
 					<div class="title">CREATE 10,000 AVATARS</div>
-					<div class="thin">CYBERFICTION FULL 3D AVATAR PRODUCTION</div>
+					<div class="thin">RAVZZY FULL 3D AVATAR PRODUCTION</div>
 					<div class="thin">사이버픽션 풀 3D 아바타 제작</div>
 				</div>
 				<div class="card">
 					<div class="thin">03/</div>
 					<div class="title">MINTING</div>
-					<div class="thin">CYBERFICTION AVATARS NFT MINTING</div>
+					<div class="thin">RAVZZY AVATARS NFT MINTING</div>
 					<div class="thin">사이버픽션 아바타 NFT 민팅</div>
 				</div>
 				<div class="card">
@@ -302,7 +286,7 @@
 				</div>
 				<div class="card">
 					<div class="thin">07/</div>
-					<div class="title">BLUEPRINT FOR CYBERFICTION</div>
+					<div class="title">BLUEPRINT FOR RAVZZY</div>
 					<div class="thin">
 						COMPLETE THE SKETCH TO CREATE A TRUE METAVERSE PLAYGROUND
 					</div>
@@ -320,28 +304,26 @@
 			<div class="dev">
 				<div class="text-spin">
 					<div class="first-line">
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
 					</div>
 					<div class="second-line">
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
 					</div>
 					<div class="third-line">
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
-						<div>CYBER FICTION* THE REAL STORY IN THE METAVERSE.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
 					</div>
 				</div>
 				<img src="./imgs/aaaaaaaaaaaa.png" alt="Founder Avatar" />
-				<h4>RYAN JEONGYOEB HAN</h4>
-				<p class="thin">FOUNDER / DREAMER / DESIGNER</p>
+				<h4>RAVZZY</h4>
+				<p class="thin">BIKER / DESIGNER</p>
 				<p class="thin">
-					I WANT TO TAKE THE INITIATIVE IN EXPERIENCING THE TIME AND SPACE OF
-					METAVERSE, WHICH COMPLETELY CAPTURES MY SPARKLING SPIRIT AWAY FROM THE
-					DYING ORGANISM.
+					My dream is to merge my passion for design, adventure, and storytelling into a space where creativity knows no bounds. As a web designer, I want to craft websites that not only look beautiful but also inspire and connect with people. As a moto biker, I aim to share my love for the open road and the freedom it brings, while creating content that resonates with fellow riders and enthusiasts. Through my YouTube and Instagram platforms, I hope to build a community where we can learn, grow, and explore together—whether it's designing the perfect website or discovering the next thrilling ride. My goal is to use my skills to empower others, inspire new ideas, and help people bring their visions to life in both the digital world and on the road.
 				</p>
 				<p class="thin">
 					소멸해가는 유기체에서 벗어나 반짝거리는 내 정신을 온전히 담아내는
@@ -350,7 +332,7 @@
 			</div>
 			<div class="vertical-line"></div>
 			<div class="top">
-				<div class="thin">CYBERFICTION / OPERATIONS TEAM</div>
+				<div class="thin">RAVZZY / OPERATIONS TEAM</div>
 				<div class="fat">SET YOUR OWN</div>
 				<div class="fat">DIRECTION, PROJECT IDEAS, ACT,</div>
 				<div class="fat">AND SHARE PERFORMANCE AND PROFITS.</div>
@@ -376,7 +358,7 @@
 					<a href="" class="btn">Instagram</a>
 				</div>
 				<div>LET'S HAVE FUN TOGETHER</div>
-				<p>2023 &copy; CyberFiction*<sup>&trade;</sup></p>
+				<p>2025 &copy; Ravzzy<sup>&trade;</sup></p>
 			</footer>
 		</section>
 	</body>
