added korean translation

--- a/index.html
+++ b/index.html
@@ -326,8 +326,7 @@
 					My dream is to merge my passion for design, adventure, and storytelling into a space where creativity knows no bounds. As a web designer, I want to craft websites that not only look beautiful but also inspire and connect with people. As a moto biker, I aim to share my love for the open road and the freedom it brings, while creating content that resonates with fellow riders and enthusiasts. Through my YouTube and Instagram platforms, I hope to build a community where we can learn, grow, and explore together—whether it's designing the perfect website or discovering the next thrilling ride. My goal is to use my skills to empower others, inspire new ideas, and help people bring their visions to life in both the digital world and on the road.
 				</p>
 				<p class="thin">
-					소멸해가는 유기체에서 벗어나 반짝거리는 내 정신을 온전히 담아내는
-					메타버스란 시공간을 주도적으로 경험하고 싶다.
+					제 꿈은 디자인, 모험, 스토리텔링에 대한 열정을 창의성이 한계를 모르는 공간으로 통합하는 것입니다. 웹 디자이너로서, 저는 아름다울 뿐만 아니라 사람들에게 영감을 주고 소통할 수 있는 웹사이트를 만들고 싶습니다. 모터바이커로서, 저는 오픈 로드와 그것이 가져다주는 자유에 대한 사랑을 공유하고, 동료 라이더와 열광자들에게 공감을 얻는 콘텐츠를 만들고자 합니다. YouTube와 Instagram 플랫폼을 통해 완벽한 웹사이트를 디자인하든, 다음에 스릴 넘치는 라이드를 발견하든, 함께 배우고, 성장하고, 탐험할 수 있는 커뮤니티를 만들고자 합니다. 제 목표는 제 기술을 사용하여 다른 사람들에게 힘을 실어주고, 새로운 아이디어에 영감을 주고, 사람들이 디지털 세계와 도로에서 자신의 비전을 실현하도록 돕는 것입니다.
 				</p>
 			</div>
 			<div class="vertical-line"></div>
