--- a/index.html
+++ b/index.html
@@ -1,114 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles.css" />
-		<title>Ravzzy</title>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
-			integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
-			integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		></script>
-		<script src="./app.js" defer></script>
-		<link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon" />
-	</head>
-	<body class="loading">
-		<div class="loader">
-			<img
-				src="./imgs/loading.png"
-				class="loader-img"
-				alt="Loading"
-				loading="eager"
-			/>
-		</div>
-		<nav>
-			<h1>Ravzzy's Digital Garage</h1>
-			<div>Made by <a href="https://ravzzy.com">Ravzzy</a></div>
-		</nav>
-		<canvas id="canvas"> </canvas>
-		<section class="hero">
-			<div class="text-loop">
-				<div class="hero-title">
-					<span>Welcome</span> <span>to my</span> <span>digital</span>
-					<span>garage</span> <span>@</span> <span>ravzzy</span
-					><span>.com</span>
-				</div>
-				<div class="hero-title">
-					<span>Welcome</span> <span>to my</span> <span>digital</span>
-					<span>garage</span> <span>@</span> <span>ravzzy</span
-					><span>.com</span>
-				</div>
-				<div class="hero-title">
-					<span>Welcome</span> <span>to my</span> <span>digital</span>
-					<span>garage</span> <span>@</span> <span>ravzzy</span
-					><span>.com</span>
-				</div>
-			</div>
-			<div class="hero-content">
-				<div class="left-content">
-					Where web design meets the open road! Explore my world as a creative web designer, adrenaline-pumping moto biker, and content creator on YouTube & Instagram. Get inspired by my designs, rides, and lifestyle—everything that fuels my passion. Let's create something epic together!
-				</div>
-				<div class="right-content">
-					<p>
-						웹 디자인이 오픈 로드와 만나는 곳! YouTube와 Instagram에서 창의적인 웹 디자이너, 아드레날린이 솟구치는 모토 바이커, 콘텐츠 크리에이터로서의 제 세계를 탐험하세요. 제 디자인, 라이드, 라이프스타일에서 영감을 얻으세요. 제 열정에 활력을 불어넣는 모든 것. 함께 멋진 것을 만들어 봅시다!
-					</p>
-					<p>...SCROLL TO READ</p>
-				</div>
-			</div>
-		</section>
-		<section class="page two">
-			<div class="left">
-				<div class="thin">HOW I CAN HELP YOU?</div>
-				<div class="fat">WEB DESIGNING,</div>
-				<div class="fat">SPONSORED POSTS & STORIES</div>
-			</div>
-			<div class="right">
-				<div class="fat">SPONSORED</div>
-				<div class="fat">REVIEWS &</div>
-				<div class="fat">COLLABORATION</div>
-				<div class="thin">...AND MUCH MORE</div>
-			</div>
-		</section>
-		<section class="page three">
-			<div class="left">
-				<div class="thin">BUT WHY CHOOSE ME?</div>
-				<div class="fat">33,000+ SUBSCRIBERS,</div>
-				<div class="fat">ORGANIC REACH &</div>
-				<div class="fat">PERSONALISATION</div>
-			</div>
-			<div class="right">
-				<div class="thin">
-					I collaborate with brands that align with my interests and values. If you're looking for an authentic influencer to promote your brand in the lifestyle, travel, tech, or biking space, I’m open to working with you
-				</div>
-				<div class="thin">
-					저는 제 관심사와 가치와 일치하는 브랜드와 협업합니다. 라이프스타일, 여행, 기술 또는 자전거 분야에서 브랜드를 홍보할 진정한 인플루언서를 찾고 있다면, 저는 여러분과 함께 일할 수 있습니다.
-				</div>
-			</div>
-		</section>
-		<section class="page four">
-			<div class="left">
-				<div class="thin">
-					As a web designer, moto biker, YouTuber, and Instagram influencer, I bring a unique combination of creativity, adventure, and technical expertise. Whether you're looking for cutting-edge web design, adrenaline-packed biking content, or lifestyle inspiration, I offer it all in one place.
-				</div>
-				<div class="thin">
-					웹 디자이너, 모토 바이커, 유튜버, 인스타그램 인플루언서로서 저는 창의성, 모험, 기술 전문성의 독특한 조합을 가져옵니다. 최첨단 웹 디자인, 아드레날린이 가득한 바이킹 콘텐츠, 라이프스타일 영감을 찾고 있든, 저는 한곳에서 모든 것을 제공합니다.
-				</div>
-			</div>
-			<div class="right">
-				<div class="thin">Sill unsure?</div>
-				<div class="fat">Scroll down</div>
 
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="styles.css" />
+	<title>Ravzzy</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+		integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+		integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="./app.js" defer></script>
+	<link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon" />
+</head>
+
+<body class="loading">
+	<div class="loader">
+		<img src="./imgs/loading.png" class="loader-img" alt="Loading" loading="eager" />
+	</div>
+	<nav>
+		<h1></h1>
+		<!--<h1><span class="highlight-red">RAVZZY</span>'s Digital Garage</h1>-->
+		<div>Designed by <a href="https://ravzzy.com">Ravzzy</a></div>
+	</nav>
+	<canvas id="canvas"> </canvas>
+	<section class="hero">
+		<div class="text-loop">
+			<div class="hero-title">
+				<span>Welcome</span> <span>to my</span> <span>digital</span>
+				<span>garage</span> <span>@</span> <span>ravzzy</span><span>.com</span>
 			</div>
-		</section>
-		<!--<div class="avatars">
+			<div class="hero-title">
+				<span>Welcome</span> <span>to my</span> <span>digital</span>
+				<span>garage</span> <span>@</span> <span>ravzzy</span><span>.com</span>
+			</div>
+			<div class="hero-title">
+				<span>Welcome</span> <span>to my</span> <span>digital</span>
+				<span>garage</span> <span>@</span> <span>ravzzy</span><span>.com</span>
+			</div>
+		</div>
+		<div class="hero-content">
+			<div class="left-content">
+				Where web design meets the open road! Explore my world as a creative web designer, adrenaline-pumping
+				moto biker, and content creator on YouTube & Instagram.Get inspired by my designs, rides, and
+				lifestyle—everything that fuels my passion.<span class="highlight-red"> Let's create something epic together!</span>
+			</div>
+			<div class="right-content">
+				<p>
+					웹 디자인이 오픈 로드와 만나는 곳! YouTube와 Instagram에서 창의적인 웹 디자이너, 아드레날린이 솟구치는 모토 바이커, 콘텐츠 크리에이터로서의 제 세계를 탐험하세요.
+					제 디자인, 라이드, 라이프스타일에서 영감을 얻으세요. 제 열정에 활력을 불어넣는 모든 것. 함께 멋진 것을 만들어 봅시다!
+				</p>
+				<p><span class="highlight-red">...SCROLL TO READ</span></p>
+			</div>
+		</div>
+	</section>
+	<section class="page two">
+		<div class="left">
+			<div class="thin">HOW I CAN HELP YOU?</div>
+			<div class="fat">WEB DESIGNING,</div>
+			<div class="fat">SPONSORED POSTS & STORIES</div>
+		</div>
+		<div class="right">
+			<div class="fat">SPONSORED</div>
+			<div class="fat">REVIEWS &</div>
+			<div class="fat">COLLABORATION</div>
+			<div class="thin">...AND MUCH MORE</div>
+		</div>
+	</section>
+	<section class="page three">
+		<div class="left">
+			<div class="thin">BUT WHY CHOOSE ME?</div>
+			<div class="fat">33,000+ SUBSCRIBERS,</div>
+			<div class="fat">ORGANIC REACH &</div>
+			<div class="fat">PERSONALISATION</div>
+		</div>
+		<div class="right">
+			<div class="thin">
+				I collaborate with brands that align with my interests and values. If you're looking for an authentic
+				influencer to promote your brand in the lifestyle, travel, tech, or biking space, I’m open to working
+				with you
+			</div>
+			<div class="thin">
+				저는 제 관심사와 가치와 일치하는 브랜드와 협업합니다. 라이프스타일, 여행, 기술 또는 자전거 분야에서 브랜드를 홍보할 진정한 인플루언서를 찾고 있다면, 저는 여러분과 함께 일할 수
+				있습니다.
+			</div>
+		</div>
+	</section>
+	<section class="page four">
+		<div class="left">
+			<div class="thin">
+				As a web designer, moto biker, YouTuber, and Instagram influencer, I bring a unique combination of
+				creativity, adventure, and technical expertise. Whether you're looking for cutting-edge web design,
+				adrenaline-packed biking content, or lifestyle inspiration, I offer it all in one place.
+			</div>
+			<div class="thin">
+				웹 디자이너, 모토 바이커, 유튜버, 인스타그램 인플루언서로서 저는 창의성, 모험, 기술 전문성의 독특한 조합을 가져옵니다. 최첨단 웹 디자인, 아드레날린이 가득한 바이킹 콘텐츠,
+				라이프스타일 영감을 찾고 있든, 저는 한곳에서 모든 것을 제공합니다.
+			</div>
+		</div>
+		<div class="right">
+			<div class="thin">Sill unsure?</div>
+			<div class="fat">Scroll down</div>
+
+		</div>
+	</section>
+	<!--<div class="avatars">
 			<section>
 				<div class="top">
 					<div class="thin">CYBERFICTION / AVATARS</div>
@@ -230,135 +228,147 @@
 				</div>
 			</section>
 		</div> -->
-		<section class="roadmap">
-			<div class="title">
-				<div class="fat">COLLABORATIONS & PROJECTS DELIVERED</div>
-				<div class="thin">Designing the digital world by day, chasing the open road by night—blending creativity, adventure, and passion into everything I do.</div>
+	<section class="roadmap">
+		<div class="title">
+			<div class="fat">COLLABORATIONS & PROJECTS DELIVERED</div>
+			<div class="thin">Designing the digital world by day, chasing the open road by night—blending creativity,
+				adventure, and passion into everything I do.</div>
+		</div>
+		<div class="cards">
+			<div class="card">
+				<div class="thin">01/</div>
+				<div class="title">LAUNCH OF OFFICIAL WEBSITE</div>
+				<div class="thin">RAVZZY OFFICIAL WEBSITE OPENED</div>
+				<div class="thin">사이버픽션 공식 홈페이지 오픈</div>
 			</div>
-			<div class="cards">
-				<div class="card">
-					<div class="thin">01/</div>
-					<div class="title">LAUNCH OF OFFICIAL WEBSITE</div>
-					<div class="thin">RAVZZY OFFICIAL WEBSITE OPENED</div>
-					<div class="thin">사이버픽션 공식 홈페이지 오픈</div>
-				</div>
-				<div class="card">
-					<div class="thin">02/</div>
-					<div class="title">CREATE 10,000 AVATARS</div>
-					<div class="thin">RAVZZY FULL 3D AVATAR PRODUCTION</div>
-					<div class="thin">사이버픽션 풀 3D 아바타 제작</div>
-				</div>
-				<div class="card">
-					<div class="thin">03/</div>
-					<div class="title">MINTING</div>
-					<div class="thin">RAVZZY AVATARS NFT MINTING</div>
-					<div class="thin">사이버픽션 아바타 NFT 민팅</div>
-				</div>
-				<div class="card">
-					<div class="thin">04/</div>
-					<div class="title">OPERATIONS TEAM ORGANIZATION</div>
-					<div class="thin">
-						AFTER MINTING IS COMPLETED, AN OPERATION TEAM IS FORMED FOR AVATAR
-						OWNERS
-					</div>
-					<div class="thin">
-						민팅 완료 후 아바타 소유자를 대상으로 운영팀 구성
-					</div>
-				</div>
-				<div class="card">
-					<div class="thin">05/</div>
-					<div class="title">THE FIRST EVENT</div>
-					<div class="thin">
-						EXECUTE COMMUNITY-PROPOSED EVENTS WITH THE OPERATIONS TEAM
-					</div>
-					<div class="thin">커뮤니티에서 제안 한 이벤트를 운영팀과 실행</div>
-				</div>
-				<div class="card">
-					<div class="thin">06/</div>
-					<div class="title">BRANDING DISCUSSION</div>
-					<div class="thin">
-						OUR STAGE IS A METAVERSE, BUT IT'S ALSO CLOSELY CONNECTED TO THE
-						REAL WORLD
-					</div>
-					<div class="thin">
-						우리의 무대는 메타버스이지만 현실 세계와도 긴밀하게 연결
-					</div>
-				</div>
-				<div class="card">
-					<div class="thin">07/</div>
-					<div class="title">BLUEPRINT FOR RAVZZY</div>
-					<div class="thin">
-						COMPLETE THE SKETCH TO CREATE A TRUE METAVERSE PLAYGROUND
-					</div>
-					<div class="thin">진정한 메타버스 놀이터를 창조할 밑그림 완성</div>
-				</div>
+			<div class="card">
+				<div class="thin">02/</div>
+				<div class="title">CREATE 10,000 AVATARS</div>
+				<div class="thin">RAVZZY FULL 3D AVATAR PRODUCTION</div>
+				<div class="thin">사이버픽션 풀 3D 아바타 제작</div>
 			</div>
-		</section>
-		<section class="final">
-			<div class="title">
-				<div class="fat">WE'RE STILL ALONE,</div>
+			<div class="card">
+				<div class="thin">03/</div>
+				<div class="title">MINTING</div>
+				<div class="thin">RAVZZY AVATARS NFT MINTING</div>
+				<div class="thin">사이버픽션 아바타 NFT 민팅</div>
+			</div>
+			<div class="card">
+				<div class="thin">04/</div>
+				<div class="title">OPERATIONS TEAM ORGANIZATION</div>
 				<div class="thin">
-					WE STARTED, BUT WE NEED THE HELP OF THE COMMUNITY.
+					AFTER MINTING IS COMPLETED, AN OPERATION TEAM IS FORMED FOR AVATAR
+					OWNERS
+				</div>
+				<div class="thin">
+					민팅 완료 후 아바타 소유자를 대상으로 운영팀 구성
 				</div>
 			</div>
-			<div class="dev">
-				<div class="text-spin">
-					<div class="first-line">
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-					</div>
-					<div class="second-line">
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-					</div>
-					<div class="third-line">
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-						<div>RAVZZY* THE MAN CHASING A DREAM.</div>
-					</div>
+			<div class="card">
+				<div class="thin">05/</div>
+				<div class="title">THE FIRST EVENT</div>
+				<div class="thin">
+					EXECUTE COMMUNITY-PROPOSED EVENTS WITH THE OPERATIONS TEAM
 				</div>
-				<img src="./imgs/aaaaaaaaaaaa.png" alt="Founder Avatar" />
-				<h4>RAVZZY</h4>
-				<p class="thin">BIKER / DESIGNER</p>
-				<p class="thin">
-					My dream is to merge my passion for design, adventure, and storytelling into a space where creativity knows no bounds. As a web designer, I want to craft websites that not only look beautiful but also inspire and connect with people. As a moto biker, I aim to share my love for the open road and the freedom it brings, while creating content that resonates with fellow riders and enthusiasts. Through my YouTube and Instagram platforms, I hope to build a community where we can learn, grow, and explore together—whether it's designing the perfect website or discovering the next thrilling ride. My goal is to use my skills to empower others, inspire new ideas, and help people bring their visions to life in both the digital world and on the road.
-				</p>
-				<p class="thin">
-					제 꿈은 디자인, 모험, 스토리텔링에 대한 열정을 창의성이 한계를 모르는 공간으로 통합하는 것입니다. 웹 디자이너로서, 저는 아름다울 뿐만 아니라 사람들에게 영감을 주고 소통할 수 있는 웹사이트를 만들고 싶습니다. 모터바이커로서, 저는 오픈 로드와 그것이 가져다주는 자유에 대한 사랑을 공유하고, 동료 라이더와 열광자들에게 공감을 얻는 콘텐츠를 만들고자 합니다. YouTube와 Instagram 플랫폼을 통해 완벽한 웹사이트를 디자인하든, 다음에 스릴 넘치는 라이드를 발견하든, 함께 배우고, 성장하고, 탐험할 수 있는 커뮤니티를 만들고자 합니다. 제 목표는 제 기술을 사용하여 다른 사람들에게 힘을 실어주고, 새로운 아이디어에 영감을 주고, 사람들이 디지털 세계와 도로에서 자신의 비전을 실현하도록 돕는 것입니다.
-				</p>
+				<div class="thin">커뮤니티에서 제안 한 이벤트를 운영팀과 실행</div>
 			</div>
-			<div class="vertical-line"></div>
-			<div class="top">
-				<div class="thin">RAVZZY / OPERATIONS TEAM</div>
-				<div class="fat">SET YOUR OWN</div>
-				<div class="fat">DIRECTION, PROJECT IDEAS, ACT,</div>
-				<div class="fat">AND SHARE PERFORMANCE AND PROFITS.</div>
-				<div>
-					<div class="thin">
-						WE FORM AN OPERATIONAL TEAM THAT WILL LEAD TO COOPERATION AND
-						ESTABLISH VALUE AND IDENTITY FOR THE WORLD WE WILL CREATE AND OWN.
-						THE OPERATIONS TEAM WILL BE THE LEADING TEAM TO LEAD THE COMMUNITY,
-						REFINE OUR THINKING, PLAN AND DECIDE.
-					</div>
-					<div class="thin">
-						우리가 만들고 소유할 세상을 위해 협력을 이끌어 내고, 가치와 정체성을
-						확립해 나갈 운영팀을 구성합니다. 운영팀은 커뮤니티를 리드하고,
-						우리의 생각을 다듬고, 계획하고 결정 해 나갈 선도적 팀이 될 것입니다.
-					</div>
+			<div class="card">
+				<div class="thin">06/</div>
+				<div class="title">BRANDING DISCUSSION</div>
+				<div class="thin">
+					OUR STAGE IS A METAVERSE, BUT IT'S ALSO CLOSELY CONNECTED TO THE
+					REAL WORLD
+				</div>
+				<div class="thin">
+					우리의 무대는 메타버스이지만 현실 세계와도 긴밀하게 연결
 				</div>
 			</div>
-			<div class="vertical-line"></div>
-			<footer>
-				<div class="socials">
-					<a href="" class="btn">Opensea</a>
-					<a href="" class="btn">Twitter</a>
-					<a href="" class="btn">Instagram</a>
+			<div class="card">
+				<div class="thin">07/</div>
+				<div class="title">BLUEPRINT FOR RAVZZY</div>
+				<div class="thin">
+					COMPLETE THE SKETCH TO CREATE A TRUE METAVERSE PLAYGROUND
 				</div>
-				<div>LET'S HAVE FUN TOGETHER</div>
-				<p>2025 &copy; Ravzzy<sup>&trade;</sup></p>
-			</footer>
-		</section>
-	</body>
+				<div class="thin">진정한 메타버스 놀이터를 창조할 밑그림 완성</div>
+			</div>
+		</div>
+	</section>
+	<section class="final">
+		<div class="title">
+			<div class="fat">WE'RE STILL ALONE,</div>
+			<div class="thin">
+				WE STARTED, BUT WE NEED THE HELP OF THE COMMUNITY.
+			</div>
+		</div>
+		<div class="dev">
+			<div class="text-spin">
+				<div class="first-line">
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+				</div>
+				<div class="second-line">
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+				</div>
+				<div class="third-line">
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+					<div>RAVZZY* THE MAN CHASING A DREAM.</div>
+				</div>
+			</div>
+			<img src="./imgs/aaaaaaaaaaaa.png" alt="Founder Avatar" />
+			<h4>RAVZZY</h4>
+			<p class="thin">BIKER / DESIGNER</p>
+			<p class="thin">
+				My dream is to merge my passion for design, adventure, and storytelling into a space where creativity
+				knows no bounds. As a web designer, I want to craft websites that not only look beautiful but also
+				inspire and connect with people. As a moto biker, I aim to share my love for the open road and the
+				freedom it brings, while creating content that resonates with fellow riders and enthusiasts. Through my
+				YouTube and Instagram platforms, I hope to build a community where we can learn, grow, and explore
+				together—whether it's designing the perfect website or discovering the next thrilling ride. My goal is
+				to use my skills to empower others, inspire new ideas, and help people bring their visions to life in
+				both the digital world and on the road.
+			</p>
+			<p class="thin">
+				제 꿈은 디자인, 모험, 스토리텔링에 대한 열정을 창의성이 한계를 모르는 공간으로 통합하는 것입니다. 웹 디자이너로서, 저는 아름다울 뿐만 아니라 사람들에게 영감을 주고 소통할 수 있는
+				웹사이트를 만들고 싶습니다. 모터바이커로서, 저는 오픈 로드와 그것이 가져다주는 자유에 대한 사랑을 공유하고, 동료 라이더와 열광자들에게 공감을 얻는 콘텐츠를 만들고자 합니다.
+				YouTube와 Instagram 플랫폼을 통해 완벽한 웹사이트를 디자인하든, 다음에 스릴 넘치는 라이드를 발견하든, 함께 배우고, 성장하고, 탐험할 수 있는 커뮤니티를 만들고자 합니다.
+				제 목표는 제 기술을 사용하여 다른 사람들에게 힘을 실어주고, 새로운 아이디어에 영감을 주고, 사람들이 디지털 세계와 도로에서 자신의 비전을 실현하도록 돕는 것입니다.
+			</p>
+		</div>
+		<div class="vertical-line"></div>
+		<div class="top">
+			<div class="thin">RAVZZY / OPERATIONS TEAM</div>
+			<div class="fat">SET YOUR OWN</div>
+			<div class="fat">DIRECTION, PROJECT IDEAS, ACT,</div>
+			<div class="fat">AND SHARE PERFORMANCE AND PROFITS.</div>
+			<div>
+				<div class="thin">
+					WE FORM AN OPERATIONAL TEAM THAT WILL LEAD TO COOPERATION AND
+					ESTABLISH VALUE AND IDENTITY FOR THE WORLD WE WILL CREATE AND OWN.
+					THE OPERATIONS TEAM WILL BE THE LEADING TEAM TO LEAD THE COMMUNITY,
+					REFINE OUR THINKING, PLAN AND DECIDE.
+				</div>
+				<div class="thin">
+					우리가 만들고 소유할 세상을 위해 협력을 이끌어 내고, 가치와 정체성을
+					확립해 나갈 운영팀을 구성합니다. 운영팀은 커뮤니티를 리드하고,
+					우리의 생각을 다듬고, 계획하고 결정 해 나갈 선도적 팀이 될 것입니다.
+				</div>
+			</div>
+		</div>
+		<div class="vertical-line"></div>
+		<footer>
+			<div class="socials">
+				<a href="" class="btn">Opensea</a>
+				<a href="" class="btn">Twitter</a>
+				<a href="" class="btn">Instagram</a>
+			</div>
+			<div>LET'S HAVE FUN TOGETHER</div>
+			<p>2025 &copy; Ravzzy<sup>&trade;</sup></p>
+		</footer>
+	</section>
+</body>
+
 </html>
