--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
 		integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollToPlugin.min.js"></script>
 	<script src="./app.js" defer></script>
 	<link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon" />
 </head>
@@ -26,7 +27,8 @@
 		<div>Designed by <a href="https://ravzzy.com">Ravzzy</a></div>
 	</nav>
 	<canvas id="canvas"> </canvas>
-	
+	<section class ="homepage"></section>
+	<!--
 	<section class="hero">
 		<div class="text-loop">
 			<div class="hero-title">
@@ -106,7 +108,7 @@
 			<div class="fat">Scroll down</div>
 
 		</div>
-	</section>
+	</section>-->
 	<!--<div class="avatars">
 			<section>
 				<div class="top">
@@ -229,7 +231,7 @@
 				</div>
 			</section>
 		</div> -->
-	<section class="roadmap">
+	<!--<section class="roadmap">
 		<div class="title">
 			<div class="fat">COLLABORATIONS & PROJECTS DELIVERED</div>
 			<div class="thin">Designing the digital world by day, chasing the open road by night—blending creativity,
@@ -369,7 +371,7 @@
 			<div>LET'S HAVE FUN TOGETHER</div>
 			<p>2025 &copy; Ravzzy<sup>&trade;</sup></p>
 		</footer>
-	</section>
+	</section> -->
 </body>
 
 </html>
