fixing the end scroll marker dynamically for desktop and mobile view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 		<div>Designed by <a href="https://ravzzy.com">Ravzzy</a></div>
 	</nav>
 	<canvas id="canvas"> </canvas>
-	<section class ="homepage"></section>
+	<section id="homepage" class ="homepage">
+		<h1>Welcome to the New Section!</h1>
+		<p>This is where you can add content that appears after the canvas section.</p>
+	</section>
 	<!--
 	<section class="hero">
 		<div class="text-loop">
