re-adding now the first 4 pages back, to see if the animation still works.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
 		<div>Designed by <a href="https://ravzzy.com">Ravzzy</a></div>
 	</nav>
 	<canvas id="canvas"> </canvas>
-	<section id="homepage" class ="homepage">
+	<!--<section id="homepage" class ="homepage">
 		<h1>Welcome to the New Section!</h1>
 		<p>This is where you can add content that appears after the canvas section.</p>
-	</section>
-	<!--
+	</section> -->
 	<section class="hero">
 		<div class="text-loop">
 			<div class="hero-title">
@@ -111,7 +110,7 @@
 			<div class="fat">Scroll down</div>
 
 		</div>
-	</section>-->
+	</section>
 	<!--<div class="avatars">
 			<section>
 				<div class="top">
@@ -234,7 +233,7 @@
 				</div>
 			</section>
 		</div> -->
-	<!--<section class="roadmap">
+	<section class="roadmap">
 		<div class="title">
 			<div class="fat">COLLABORATIONS & PROJECTS DELIVERED</div>
 			<div class="thin">Designing the digital world by day, chasing the open road by night—blending creativity,
@@ -374,7 +373,7 @@
 			<div>LET'S HAVE FUN TOGETHER</div>
 			<p>2025 &copy; Ravzzy<sup>&trade;</sup></p>
 		</footer>
-	</section> -->
+	</section>
 </body>
 
 </html>
