previous code broke the animation, so moving the animation as z-index 5

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 				</div>
 			</section>
 		</div> -->
-	<section class="roadmap">
+	<!--<section class="roadmap">
 		<div class="title">
 			<div class="fat">COLLABORATIONS & PROJECTS DELIVERED</div>
 			<div class="thin">Designing the digital world by day, chasing the open road by night—blending creativity,
@@ -373,7 +373,7 @@
 			<div>LET'S HAVE FUN TOGETHER</div>
 			<p>2025 &copy; Ravzzy<sup>&trade;</sup></p>
 		</footer>
-	</section>
+	</section> -->
 </body>
 
 </html>
