--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 		</div>
 		<div class="hero-content">
 			<div class="left-content">
-				Where web design meets the open road! Explore my world as a creative web designer, adrenaline-pumping
-				moto biker, and content creator on YouTube & Instagram.Get inspired by my designs, rides, and
-				lifestyle—everything that fuels my passion.<span class="highlight-red"> Let's create something epic together!</span>
+				Where web design meets the open road! <span class="highlight-red"> Explore my world as a creative web designer, adrenaline-pumping
+				moto biker, and content creator on YouTube & Instagram</span>. Get inspired by my designs, rides, and
+				lifestyle—everything that fuels my passion. Let's create something epic together!
+				<p><span class="bold-text">...SCROLL TO READ &#10597</span></p>
 			</div>
 			<div class="right-content">
 				<p>
 					웹 디자인이 오픈 로드와 만나는 곳! YouTube와 Instagram에서 창의적인 웹 디자이너, 아드레날린이 솟구치는 모토 바이커, 콘텐츠 크리에이터로서의 제 세계를 탐험하세요.
 					제 디자인, 라이드, 라이프스타일에서 영감을 얻으세요. 제 열정에 활력을 불어넣는 모든 것. 함께 멋진 것을 만들어 봅시다!
 				</p>
-				<p><span class="highlight-red">...SCROLL TO READ</span></p>
 			</div>
 		</div>
 	</section>
@@ -375,5 +375,10 @@
 		</footer>
 	</section> -->
 </body>
+<script>
+	window.onbeforeunload = function () {
+		window.scrollTo(0, 0);
+	};
+</script>
 
 </html>
