page 2 draft completed

--- a/index.html
+++ b/index.html
@@ -63,15 +63,12 @@
 	</section>
 	<section class="page two">
 		<div class="left">
-			<div class="thin">HOW I CAN HELP YOU?</div>
-			<div class="fat">WEB DESIGNING,</div>
-			<div class="fat">SPONSORED POSTS & STORIES</div>
+			<div class="fat">Supercharge Your Workflow: <span class="highlight-red"> Tools, Designs, and Tutorials </span>at Your Fingertips</div>
+			<div class="thin">Unlock a treasure trove of tools, designs, and tutorials right here on our website to turbocharge your tasks—no more endless Googling!</div>
 		</div>
 		<div class="right">
-			<div class="fat">SPONSORED</div>
-			<div class="fat">REVIEWS &</div>
-			<div class="fat">COLLABORATION</div>
-			<div class="thin">...AND MUCH MORE</div>
+			<div class="thin">Don’t forget to bookmark this page and dive into the menu—amazing free resources are waiting for you!</div>
+			<div class="thin"><span class="highlight-red">...AND MUCH MORE</span></div>
 		</div>
 	</section>
 	<section class="page three">
