page 3 draft completed

--- a/index.html
+++ b/index.html
@@ -68,25 +68,17 @@
 		</div>
 		<div class="right">
 			<div class="thin">Don’t forget to bookmark this page and dive into the menu—amazing free resources are waiting for you!</div>
-			<div class="thin"><span class="highlight-red">...AND MUCH MORE</span></div>
+			<div class="thin"><span class="highlight-red bold-text">...AND MUCH MORE</span></div>
 		</div>
 	</section>
 	<section class="page three">
 		<div class="left">
-			<div class="thin">BUT WHY CHOOSE ME?</div>
-			<div class="fat">33,000+ SUBSCRIBERS,</div>
-			<div class="fat">ORGANIC REACH &</div>
-			<div class="fat">PERSONALISATION</div>
+			<div class="fat">Who am I?</div>
+			<div class="thin">I’m Ravzzy, a solution architect by profession, web designer and Kawasaki Ninja rider as a hobbyist, and this is my corner of the internet where I share all the cool stuff I’ve created and learned from the awesome community! <span class="highlight-red"> No annoying ads—just pure, unfiltered knowledge</span> to help you level up fast and kickstart your learning adventure! Let’s dive in! 🚀</div>
 		</div>
 		<div class="right">
 			<div class="thin">
-				I collaborate with brands that align with my interests and values. If you're looking for an authentic
-				influencer to promote your brand in the lifestyle, travel, tech, or biking space, I’m open to working
-				with you
-			</div>
-			<div class="thin">
-				저는 제 관심사와 가치와 일치하는 브랜드와 협업합니다. 라이프스타일, 여행, 기술 또는 자전거 분야에서 브랜드를 홍보할 진정한 인플루언서를 찾고 있다면, 저는 여러분과 함께 일할 수
-				있습니다.
+				저는 Ravzzy입니다. 직업은 솔루션 아키텍트, 웹 디자이너, 취미는 Kawasaki Ninja 라이더입니다. 여기는 제가 만든 멋진 것들과 멋진 커뮤니티에서 배운 것들을 공유하는 인터넷 코너입니다! 귀찮은 광고는 없습니다. 순수하고 걸러지지 않은 지식만 제공하여 빠르게 레벨업하고 학습 모험을 시작할 수 있도록 도와드립니다! 시작해 볼까요! 🚀
 			</div>
 		</div>
 	</section>
