--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 		</div>
 		<div class="hero-content">
 			<div class="left-content">
-				Where web design meets the open road! <span class="highlight-red"> Explore my world as a creative web designer, adrenaline-pumping
-				moto biker, and content creator on YouTube & Instagram</span>. Get inspired by my designs, rides, and
+				Where web design meets the open road! <span class="highlight-red"> Explore my world as a creative web
+					designer, adrenaline-pumping
+					moto biker, and content creator on YouTube & Instagram</span>. Get inspired by my designs, rides,
+				and
 				lifestyle—everything that fuels my passion. Let's create something epic together!
 				<p><span class="bold-text">...SCROLL TO READ &#10597</span></p>
 			</div>
@@ -63,41 +65,46 @@
 	</section>
 	<section class="page two">
 		<div class="left">
-			<div class="fat">Supercharge Your Workflow: <span class="highlight-red"> Tools, Designs, and Tutorials </span>at Your Fingertips</div>
-			<div class="thin">Unlock a treasure trove of tools, designs, and tutorials right here on our website to turbocharge your tasks—no more endless Googling!</div>
+			<div class="fat">Supercharge Your Workflow: <span class="highlight-red"> Tools, Designs, and Tutorials
+				</span>at Your Fingertips</div>
+			<div class="thin">Unlock a treasure trove of tools, designs, and tutorials right here on our website to
+				turbocharge your tasks—no more endless Googling!</div>
 		</div>
 		<div class="right">
-			<div class="thin">Don’t forget to bookmark this page and dive into the menu—amazing free resources are waiting for you!</div>
+			<div class="thin">Don’t forget to bookmark this page and dive into the menu—amazing free resources are
+				waiting for you!</div>
 			<div class="thin"><span class="highlight-red bold-text">...AND MUCH MORE</span></div>
 		</div>
 	</section>
 	<section class="page three">
 		<div class="left">
 			<div class="fat">Who am I?</div>
-			<div class="thin">I’m Ravzzy, a solution architect by profession, web designer and Kawasaki Ninja rider as a hobbyist, and this is my corner of the internet where I share all the cool stuff I’ve created and learned from the awesome community! <span class="highlight-red"> No annoying ads—just pure, unfiltered knowledge</span> to help you level up fast and kickstart your learning adventure! Let’s dive in! 🚀</div>
+			<div class="thin">I’m Ravzzy, a solution architect by profession, web designer and Kawasaki Ninja rider as a
+				hobbyist, and this is my corner of the internet where I share all the cool stuff I’ve created and
+				learned from the awesome community! <span class="highlight-red"> No annoying ads—just pure, unfiltered
+					knowledge</span> to help you level up fast and kickstart your learning adventure! Let’s dive in! 🚀
+			</div>
 		</div>
 		<div class="right">
 			<div class="thin">
-				저는 Ravzzy입니다. 직업은 솔루션 아키텍트, 웹 디자이너, 취미는 Kawasaki Ninja 라이더입니다. 여기는 제가 만든 멋진 것들과 멋진 커뮤니티에서 배운 것들을 공유하는 인터넷 코너입니다! 귀찮은 광고는 없습니다. 순수하고 걸러지지 않은 지식만 제공하여 빠르게 레벨업하고 학습 모험을 시작할 수 있도록 도와드립니다! 시작해 볼까요! 🚀
+				저는 Ravzzy입니다. 직업은 솔루션 아키텍트, 웹 디자이너, 취미는 Kawasaki Ninja 라이더입니다. 여기는 제가 만든 멋진 것들과 멋진 커뮤니티에서 배운 것들을 공유하는
+				인터넷 코너입니다! 귀찮은 광고는 없습니다. 순수하고 걸러지지 않은 지식만 제공하여 빠르게 레벨업하고 학습 모험을 시작할 수 있도록 도와드립니다! 시작해 볼까요! 🚀
 			</div>
 		</div>
 	</section>
 	<section class="page four">
 		<div class="left">
+			<div class="fat">Want to Collaborate?</div>
 			<div class="thin">
-				As a web designer, moto biker, YouTuber, and Instagram influencer, I bring a unique combination of
-				creativity, adventure, and technical expertise. Whether you're looking for cutting-edge web design,
-				adrenaline-packed biking content, or lifestyle inspiration, I offer it all in one place.
-			</div>
-			<div class="thin">
-				웹 디자이너, 모토 바이커, 유튜버, 인스타그램 인플루언서로서 저는 창의성, 모험, 기술 전문성의 독특한 조합을 가져옵니다. 최첨단 웹 디자인, 아드레날린이 가득한 바이킹 콘텐츠,
-				라이프스타일 영감을 찾고 있든, 저는 한곳에서 모든 것을 제공합니다.
+				As a web designer, moto biker, YouTuber, and Instagram influencer, I blend creativity, adventure, and
+				technical expertise into one exciting mix! Whether you're after stunning web design, heart-racing biking
+				content, or lifestyle inspo, I’ve got it all. Let’s team up and create something amazing
+				together—collaborations are always welcome! <span class="highlight-red"> Connect with me on my social handles right here on this
+				page, and let’s make magic happen!</span> 🌟
 			</div>
 		</div>
 		<div class="right">
-			<div class="thin">Sill unsure?</div>
-			<div class="fat">Scroll down</div>
-
+			<div class="thin">Social Media Handles</div>
 		</div>
 	</section>
 	<!--<div class="avatars">
