draft 4 completed with social media handle

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="styles.css" />
 	<title>Ravzzy</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
 		integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -103,10 +104,21 @@
 				page, and let’s make magic happen!</span> 🌟
 			</div>
 		</div>
-		<div class="right">
-			<div class="thin">Social Media Handles</div>
-		</div>
 	</section>
+	<div class="social-handle">
+		<a href="https://www.instagram.com/swiftwindwalker" target="_blank">
+			<i class="fa-brands fa-instagram"></i>
+		</a>
+		<a href="https://www.facebook.com/motoravzzy" target="_blank">
+			<i class="fa-brands fa-facebook"></i>
+		</a>
+		<a href="https://www.instagram.com/motoravzzy" target="_blank">
+			<i class="fa-brands fa-instagram"></i>
+		</a>
+		<a href="https://www.youtube.com/ravzzy" target="_blank">
+			<i class="fa-brands fa-youtube"></i>
+		</a>			
+	</div>
 	<!--<div class="avatars">
 			<section>
 				<div class="top">
