this should hopefully fix the residual during loading, culprit being containers for both sidebar and navbar - handled via js

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 	<div class="loader">
 		<img src="./imgs/loading.png" class="loader-img" alt="Loading" loading="eager" />
 	</div>
-	<div id="navbar-container"></div> <!-- Navbar will be inserted here via js-->
+	<div id="navbar-container" class="navbar-container"></div> <!-- Navbar will be inserted here via js-->
 	<button class="menu-btn">☰</button>
-	<div id="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
+	<div id="sidebar-container" class="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
 	<!--<nav>
 		<h1></h1>
 		<h1><span class="highlight-red">RAVZZY</span>'s Digital Garage</h1>
